--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 10:40:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:37:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3adc91037cde" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -16,6 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
+  <link href="https://www.nords.fi/404" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
 </head>
@@ -25,10 +26,10 @@
       <div class="container">
         <div class="navigation-grid">
           <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a02689f-1a02689b" class="div-flex">
-            <a href="https://www.nords.fi/" class="logo-link w-inline-block"><img src="images/ndm-cropped.png" loading="lazy" alt="" class="nords-logo"></a>
+            <a href="https://www.nords.fi/" class="logo-link w-inline-block"><img src="images/ndm-cropped.png" loading="lazy" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." class="nords-logo"></a>
           </div>
           <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a0268a2-1a02689b" class="flex-wrapper">
-            <div data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268df" class="hamburger-menu"><img src="images/add_FILL0_wght300_GRAD0_opsz48-2.svg" loading="lazy" width="20" alt="" class="animation-image _2">
+            <div data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268df" class="hamburger-menu"><img src="images/plus.svg" loading="lazy" width="20" alt="Kaksi viivaa, jotka muodostavat plus merkin." class="animation-image _2">
               <div class="social-circle hamburger"></div>
             </div>
           </div>
@@ -76,10 +77,10 @@
           <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
             <div class="social-circle instagram"></div>
           </a>
-          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/5305164_play_video_youtube_youtube-logo_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
             <div class="social-circle twitter"></div>
           </a>
-          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
             <div class="social-circle dribble"></div>
           </a>
         </div>
@@ -128,7 +129,7 @@
                 <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2863" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
                   <div class="social-circle instagram"></div>
                 </a>
-                <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2866" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/5305164_play_video_youtube_youtube-logo_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2866" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="" class="animation-image _3">
                   <div class="social-circle twitter"></div>
                 </a>
                 <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2869" href="https://github.com/nordsfi" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
