--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 10:40:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:37:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a98fc037da0" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -6,10 +6,10 @@
   <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Kysymme perustietojasi ja toiveitasi, jotta voimme luoda sinulle juuri sellaiset kotisivut kuin haluat. Täytä lomake huolellisesti, jotta voimme aloittaa työn mahdollisimman pian." name="description">
   <meta content="Täytä tiedot, jotta saamme projektisi käyntiin! - Nords Oy" property="og:title">
   <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Kysymme perustietojasi ja toiveitasi, jotta voimme luoda sinulle juuri sellaiset kotisivut kuin haluat. Täytä lomake huolellisesti, jotta voimme aloittaa työn mahdollisimman pian." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/641dd66d5072a0efeea9667c_widescreen.jpg" property="og:image">
+  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/648f0479464b7cc8abe3d469_webimage.webp" property="og:image">
   <meta content="Täytä tiedot, jotta saamme projektisi käyntiin! - Nords Oy" property="twitter:title">
   <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Kysymme perustietojasi ja toiveitasi, jotta voimme luoda sinulle juuri sellaiset kotisivut kuin haluat. Täytä lomake huolellisesti, jotta voimme aloittaa työn mahdollisimman pian." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/641dd66d5072a0efeea9667c_widescreen.jpg" property="twitter:image">
+  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/648f0479464b7cc8abe3d469_webimage.webp" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -23,6 +23,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
+  <link href="https://www.nords.fi/kotisivut-kysely" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -132,7 +133,7 @@
                   <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2863" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
                     <div class="social-circle instagram"></div>
                   </a>
-                  <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2866" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/5305164_play_video_youtube_youtube-logo_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                  <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2866" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="" class="animation-image _3">
                     <div class="social-circle twitter"></div>
                   </a>
                   <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2869" href="https://github.com/nordsfi" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
