--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 10:40:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:37:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a1e6f037d22" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
   <title>Ota meihin yhteyttä tänään! - Nords Oy</title>
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tarjoamme laadukasta kotisivujen kehitystä, logon suunnittelua ja brändäyspalveluita. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" name="description">
+  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" name="description">
   <meta content="Ota meihin yhteyttä tänään! - Nords Oy" property="og:title">
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tarjoamme laadukasta kotisivujen kehitystä, logon suunnittelua ja brändäyspalveluita. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/641dd66d5072a0efeea9667c_widescreen.jpg" property="og:image">
+  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/648f0479464b7cc8abe3d469_webimage.webp" property="og:image">
   <meta content="Ota meihin yhteyttä tänään! - Nords Oy" property="twitter:title">
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tarjoamme laadukasta kotisivujen kehitystä, logon suunnittelua ja brändäyspalveluita. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/641dd66d5072a0efeea9667c_widescreen.jpg" property="twitter:image">
+  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/648f0479464b7cc8abe3d469_webimage.webp" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -23,6 +23,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
+  <link href="https://www.nords.fi/ota-yhteytta" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
 </head>
@@ -33,10 +34,10 @@
         <div class="container">
           <div class="navigation-grid">
             <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a02689f-1a02689b" class="div-flex">
-              <a href="https://www.nords.fi/" class="logo-link w-inline-block"><img src="images/ndm-cropped.png" loading="lazy" alt="" class="nords-logo"></a>
+              <a href="https://www.nords.fi/" class="logo-link w-inline-block"><img src="images/ndm-cropped.png" loading="lazy" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." class="nords-logo"></a>
             </div>
             <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a0268a2-1a02689b" class="flex-wrapper">
-              <div data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268df" class="hamburger-menu"><img src="images/add_FILL0_wght300_GRAD0_opsz48-2.svg" loading="lazy" width="20" alt="" class="animation-image _2">
+              <div data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268df" class="hamburger-menu"><img src="images/plus.svg" loading="lazy" width="20" alt="Kaksi viivaa, jotka muodostavat plus merkin." class="animation-image _2">
                 <div class="social-circle hamburger"></div>
               </div>
             </div>
@@ -84,10 +85,10 @@
             <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
               <div class="social-circle instagram"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/5305164_play_video_youtube_youtube-logo_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
               <div class="social-circle dribble"></div>
             </a>
           </div>
@@ -136,7 +137,7 @@
               <p>Jos haluat ottaa yhteyttä sähköpostitse, lähetä viesti osoitteeseen <a href="mailto:eeli@nords.fi">eeli@nords.fi.</a>
               </p>
             </div>
-            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1f5-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1f5" style="opacity:0" class="contact-detail-wrap"><img src="images/whatsapp.svg" loading="lazy" alt="" class="contact-icon">
+            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1f5-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1f5" style="opacity:0" class="contact-detail-wrap"><img src="images/whatsapp.svg" loading="lazy" alt="" class="contact-icon small">
               <h1 class="footer-title big">WhatsApp</h1>
               <p>Voit myös lähettää meille viestiä WhatsApissa numeroon <a href="http://wa.me/358449819623" target="_blank">044 981 9623</a>!</p>
             </div>
@@ -209,7 +210,7 @@
         <div class="footer-divider"></div>
         <div>
           <div class="footer-grid">
-            <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" alt="" class="logo-footer">
+            <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." class="logo-footer">
               <div class="margin-30px">
                 <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.</p>
               </div>
@@ -232,10 +233,10 @@
                   <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b0" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
                     <div class="social-circle instagram"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/5305164_play_video_youtube_youtube-logo_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
                     <div class="social-circle twitter"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
                     <div class="social-circle dribble"></div>
                   </a>
                 </div>
