Update mobile heading styles

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:37:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:46:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a13cc037ca2" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -103,13 +103,13 @@
         <div class="hero-grid">
           <div id="w-node-_245e4a3d-ff17-6578-ba65-730586e95f6e-cc037ca2" class="part-2">
             <div class="hero-flex-center">
-              <h1 style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);opacity:0" class="hero-display _1">Visioi.</h1>
+              <h1 class="hero-display _1 home">Visioi.</h1>
             </div>
             <div class="hero-flex-center _2">
-              <h2 style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);opacity:0" class="hero-display _2">Luo.</h2>
+              <h2 class="hero-display _2 home">Luo.</h2>
             </div>
             <div class="hero-flex-center">
-              <h2 style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);opacity:0" class="hero-display _3">Saavuta.</h2>
+              <h2 class="hero-display _3 home">Saavuta.</h2>
             </div>
           </div>
           <div id="w-node-_245e4a3d-ff17-6578-ba65-730586e95f78-cc037ca2" class="part-1">
