Cleanup title styles in mobile screen sizes

--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:46:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:54:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="648723801c20dfbb10a9db9d" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -103,7 +103,7 @@
         <div class="hero-grid">
           <div id="w-node-_62d2a689-3014-4d03-e5fd-5a2792f9814b-10a9db9d" class="part-2">
             <div class="hero-flex-center _1 no-padding">
-              <h1 style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-10deg, 0);opacity:0" class="hero-display _1">Hinnasto</h1>
+              <h1 class="hero-display _1 hinnasto">Hinnasto</h1>
             </div>
           </div>
           <div id="w-node-_62d2a689-3014-4d03-e5fd-5a2792f98152-10a9db9d" class="part-1">
