Update contact page header styling

--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:54:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jun 19 2023 05:42:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a1e6f037d22" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -103,7 +103,7 @@
         <div class="hero-grid">
           <div id="w-node-_2a18959f-0d4a-7671-4695-e1c236458fed-6f037d22" class="part-2">
             <div class="hero-flex-center _1 no-padding">
-              <h1 class="hero-display _1 left-align">Ota yhteyttä</h1>
+              <h1 class="hero-display _1 left-align contact">Ota yhteyttä</h1>
             </div>
           </div>
           <div id="w-node-_2a18959f-0d4a-7671-4695-e1c236458ff1-6f037d22" class="part-1">
