--- a/palvelut.html
+++ b/palvelut.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 18 2023 13:54:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jun 19 2023 05:42:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a292c037d99" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -215,7 +215,7 @@
           </div>
         </div>
         <div class="grid-3-columns">
-          <div data-w-id="1644e13c-1f39-c47b-9117-5359831921d4" style="opacity:0" class="features-content mobile-no-padding">
+          <div data-w-id="1644e13c-1f39-c47b-9117-5359831921d4" style="opacity:0" class="features-content mobile-no-padding top-20">
             <div>
               <div class="icon-circle"><img src="images/star.svg" loading="lazy" width="55" alt="" class="feature-icon"></div>
             </div>
