Update footer href targets

--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 25 2023 21:43:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jun 26 2023 11:18:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a98fc037da0" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -136,7 +136,7 @@
                   <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2866" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="" class="animation-image _3">
                     <div class="social-circle twitter"></div>
                   </a>
-                  <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2869" href="https://github.com/nordsfi" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                  <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2869" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
                     <div class="social-circle dribble"></div>
                   </a>
                 </div>
