--- a/palaute.html
+++ b/palaute.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jun 26 2023 11:18:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jun 26 2023 11:42:27 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3aa41e037d70" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -6,10 +6,10 @@
   <meta content="Haluamme kuulla mielipiteesi ja kehittää palveluitamme paremmiksi. Käytä tätä sivua lähettääksesi meille arvostelusi ja kommenttisi palvelustamme. Odotamme innolla palautettasi ja kiitämme jo etukäteen arvokkaasta panoksestasi palvelumme kehittämisessä." name="description">
   <meta content="Anna palautetta - Nords Oy" property="og:title">
   <meta content="Haluamme kuulla mielipiteesi ja kehittää palveluitamme paremmiksi. Käytä tätä sivua lähettääksesi meille arvostelusi ja kommenttisi palvelustamme. Odotamme innolla palautettasi ja kiitämme jo etukäteen arvokkaasta panoksestasi palvelumme kehittämisessä." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/648f0479464b7cc8abe3d469_webimage.webp" property="og:image">
+  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/64997955529708c661ffbd10_opengraph.jpg" property="og:image">
   <meta content="Anna palautetta - Nords Oy" property="twitter:title">
   <meta content="Haluamme kuulla mielipiteesi ja kehittää palveluitamme paremmiksi. Käytä tätä sivua lähettääksesi meille arvostelusi ja kommenttisi palvelustamme. Odotamme innolla palautettasi ja kiitämme jo etukäteen arvokkaasta panoksestasi palvelumme kehittämisessä." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/648f0479464b7cc8abe3d469_webimage.webp" property="twitter:image">
+  <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/64997955529708c661ffbd10_opengraph.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
