Clean up code and update form configurations

--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jun 26 2023 11:42:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 17:56:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a98fc037da0" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
             <div class="paragraph-1 paragraph-gray top-margin">Täytäthän alla olevat tiedot oikein, niin saamme sivujesi tuotannon nopeasti liikkeelle!</div>
           </div>
           <div class="w-form">
-            <form id="wf-form-Kotisivut-kysely" name="wf-form-Kotisivut-kysely" data-name="Kotisivut-kysely" action="https://formsubmit.co/joose@nords.fi" method="post" enctype="multipart/form-data" data-wf-page-id="63949a6eea7b3a98fc037da0" data-wf-element-id="f84697b4-cf95-afb8-9596-d3a41240f306">
+            <form id="wf-form-Kotisivut-kysely" name="wf-form-Kotisivut-kysely" data-name="Kotisivut-kysely" action="https://formsubmit.co/joose@nords.fi" method="post" data-wf-page-id="63949a6eea7b3a98fc037da0" data-wf-element-id="f84697b4-cf95-afb8-9596-d3a41240f306">
               <div class="personal-details">
                 <div id="w-node-_03dbe132-6c02-a1b6-544d-0ed63a45e884-fc037da0" class="display-4">Yrityksen tiedot</div>
                 <div id="w-node-f84697b4-cf95-afb8-9596-d3a41240f346-fc037da0" class="grid-cell"><label for="Yrityksen-nimi" class="paragraph-1 paragraph-gray">Yrityksesi nimi</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Yrityksen-nimi" data-name="Yrityksen nimi" placeholder="Nords Oy" id="Yrityksen-nimi" required=""></div>
@@ -72,10 +72,6 @@
                 <div id="w-node-f116de5f-c530-f764-761e-1fcba1a1ec3c-fc037da0" class="grid-cell"><label for="Lisatiedot" class="paragraph-1 paragraph-gray">Vapaamuotoista lisätietoa yrityksestä</label><textarea id="Lisatiedot" name="Lisatiedot" maxlength="5000" data-name="Lisatiedot" placeholder="" class="text-field text-area w-input"></textarea></div>
                 <div id="w-node-_0de12999-898c-a471-a570-22151820821a-fc037da0" class="grid-cell"><label for="Toiveita" class="paragraph-1 paragraph-gray">Toiveita sivujen suhteen</label><textarea id="Toiveita" name="Toiveita" maxlength="5000" data-name="Toiveita" placeholder="" class="text-field text-area w-input"></textarea></div>
                 <div id="w-node-_3984bc94-4b12-d6c0-73a9-15b35f575850-fc037da0" class="grid-cell"><label for="Referensseja" class="paragraph-1 paragraph-gray">Referenssejä muista sivuista</label><textarea id="Referensseja" name="Referensseja" maxlength="5000" data-name="Referensseja" placeholder="Jos olet nähnyt sivut, jotka ovat vastanneet visiotasi, jätä tähän linkki!" class="text-field text-area w-input"></textarea></div>
-              </div>
-              <div class="w-embed"><label for="myFile" style="display: inline-block; font-family: 'Satoshi', sans-serif; font-size: 22px; font-weight: normal; color: #8f8f8f;">Logo:</label>
-                <span style="display: inline-block; width: 16px;"></span>
-                <input type="file" id="myFile" name="logo" style="display: inline-block;">
               </div>
               <div class="button-wrapper simple-kysely"><input type="submit" value="Lähetä" data-wait="Odoita hetki..." class="button feedback w-button">
                 <div class="security-field no-margin">
