Update form configurations

--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 17:56:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 23:36:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a1e6f037d22" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -144,7 +144,7 @@
           </div>
           <div class="margin-60px">
             <div class="w-form">
-              <form method="post" name="wf-form-Yhteydenottolomake-nords.fi" data-name="Yhteydenottolomake (nords fi)" style="opacity:0" data-w-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288" action="https://formsubmit.co/joose@nords.fi" id="wf-form-Yhteydenottolomake-nords.fi" class="form-grid" data-wf-page-id="63949a6eea7b3a1e6f037d22" data-wf-element-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288"><input type="text" class="text-field-contact w-input" maxlength="256" name="Nimi" data-name="Nimi" placeholder="Nimi*" id="Nimi" required=""><input type="text" class="text-field-contact w-input" maxlength="256" name="Yrityksen-nimi" data-name="Yrityksen nimi" placeholder="Yrityksen nimi" id="Yrityksen-nimi"><input type="email" class="text-field-contact w-input" maxlength="256" name="S-hk-posti" data-name="Sähköposti" placeholder="Sähköposti*" id="S-hk-posti" required=""><input type="tel" class="text-field-contact w-input" maxlength="256" name="Puhelinnumero" data-name="Puhelinnumero" placeholder="Puhelinnumero" id="Puhelinnumero"><select id="Kuinka-sait-tiet-meist" name="Kuinka-sait-tiet-meist" data-name="Kuinka sait tietää meistä" class="select-field w-node-_15d6b544-3973-d893-e977-3880fb84d369-6f037d22 w-select">
+              <form method="post" name="wf-form-Yhteydenottolomake" data-name="Yhteydenottolomake" style="opacity:0" data-w-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288" action="https://airform.io/joose@nords.fi" id="wf-form-Yhteydenottolomake" class="form-grid" data-wf-page-id="63949a6eea7b3a1e6f037d22" data-wf-element-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288"><input type="text" class="text-field-contact w-input" maxlength="256" name="Nimi" data-name="Nimi" placeholder="Nimi*" id="Nimi" required=""><input type="text" class="text-field-contact w-input" maxlength="256" name="Yrityksen-nimi" data-name="Yrityksen nimi" placeholder="Yrityksen nimi" id="Yrityksen-nimi"><input type="email" class="text-field-contact w-input" maxlength="256" name="S-hk-posti" data-name="Sähköposti" placeholder="Sähköposti*" id="S-hk-posti" required=""><input type="tel" class="text-field-contact w-input" maxlength="256" name="Puhelinnumero" data-name="Puhelinnumero" placeholder="Puhelinnumero" id="Puhelinnumero"><select id="Kuinka-sait-tiet-meist" name="Kuinka-sait-tiet-meist" data-name="Kuinka sait tietää meistä" class="select-field w-node-_15d6b544-3973-d893-e977-3880fb84d369-6f037d22 w-select">
                   <option value="">Kuinka sait tietää meistä</option>
                   <option value="Googlen hakutuloksista">Googlen hakutuloksista</option>
                   <option value="Suositus ystävältä">Suositus ystävältä</option>
@@ -159,17 +159,6 @@
                         <path d="M15.293 8.293 10 13.586l-1.293-1.293a1 1 0 1 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l6-6a1 1 0 0 0-1.414-1.414Z" fill="#curren" class="fill-232323"></path>
                       </svg></div>
                     <div class="security-label">Tietosi on suojattu <a href="tietosuojaseloste" class="security-link">tietosuojaselosteemme</a> mukaisesti</div>
-                  </div>
-                </div>
-                <div class="formsubmit-configuration">
-                  <div class="w-embed"><input type="hidden" name="_next" value="https://www.nords.fi/kiitos"></div>
-                  <div class="w-embed">
-                    <!--  Mukauta sähköpostin aihe  -->
-                    <input type="hidden" name="_subject" value="Uusi yhteydenotto! (nords.fi)">
-                  </div>
-                  <div class="w-embed">
-                    <!--  Poista reCAPTCHA käytöstä  -->
-                    <input type="hidden" name="_captcha" value="false">
                   </div>
                 </div>
               </form>
