Update form field identifiers and sitemap.xml file

--- a/palaute.html
+++ b/palaute.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 23:36:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 23:46:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3aa41e037d70" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -80,9 +80,9 @@
                   </label></div>
               </div>
               <div class="personal-details">
-                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa393-1e037d70" class="grid-cell"><label for="Yrityksesi" class="paragraph-1 paragraph-gray">Yrityksesi</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Yrityksesi" data-name="Yrityksesi" placeholder="" id="Yrityksesi"></div>
-                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa39b-1e037d70" class="grid-cell"><label for="Vapaamuotoinen-palaute" class="paragraph-1 paragraph-gray">Vapaamuotoinen palaute</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Vapaamuotoinen-palaute" data-name="Vapaamuotoinen palaute" placeholder="" id="Vapaamuotoinen-palaute"></div>
-                <div id="w-node-_46f47872-3b81-009b-cd21-4d04d66dd5b6-1e037d70" class="grid-cell"><label class="w-checkbox check-box feedback"><input type="checkbox" id="Saa-kayttaa-markkinointiin" name="Saa-kayttaa-markkinointiin" data-name="Saa kayttaa markkinointiin" class="w-checkbox-input checkbox feedback"><span class="paragraph-1 paragraph-gray w-form-label" for="Saa-kayttaa-markkinointiin">Palautettani saa käyttää markkinointiin.</span></label></div>
+                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa393-1e037d70" class="grid-cell"><label for="yritys" class="paragraph-1 paragraph-gray">Yrityksesi</label><input type="text" class="text-field-2 w-input" maxlength="256" name="yritys" data-name="yritys" placeholder="" id="yritys"></div>
+                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa39b-1e037d70" class="grid-cell"><label for="palaute" class="paragraph-1 paragraph-gray">Vapaamuotoinen palaute</label><input type="text" class="text-field-2 w-input" maxlength="256" name="palaute" data-name="palaute" placeholder="" id="palaute"></div>
+                <div id="w-node-_46f47872-3b81-009b-cd21-4d04d66dd5b6-1e037d70" class="grid-cell"><label class="w-checkbox check-box feedback"><input type="checkbox" id="suostumus" name="suostumus" data-name="suostumus" class="w-checkbox-input checkbox feedback"><span class="paragraph-1 paragraph-gray w-form-label" for="suostumus">Palautettani saa käyttää markkinointiin.</span></label></div>
               </div>
               <div class="button-wrapper"><input type="submit" value="Anna palaute" data-wait="Odoita hetki..." class="button feedback w-button">
                 <div class="security-field no-margin">
