--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 23:36:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 23:46:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a1e6f037d22" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -144,14 +144,14 @@
           </div>
           <div class="margin-60px">
             <div class="w-form">
-              <form method="post" name="wf-form-Yhteydenottolomake" data-name="Yhteydenottolomake" style="opacity:0" data-w-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288" action="https://airform.io/joose@nords.fi" id="wf-form-Yhteydenottolomake" class="form-grid" data-wf-page-id="63949a6eea7b3a1e6f037d22" data-wf-element-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288"><input type="text" class="text-field-contact w-input" maxlength="256" name="Nimi" data-name="Nimi" placeholder="Nimi*" id="Nimi" required=""><input type="text" class="text-field-contact w-input" maxlength="256" name="Yrityksen-nimi" data-name="Yrityksen nimi" placeholder="Yrityksen nimi" id="Yrityksen-nimi"><input type="email" class="text-field-contact w-input" maxlength="256" name="S-hk-posti" data-name="Sähköposti" placeholder="Sähköposti*" id="S-hk-posti" required=""><input type="tel" class="text-field-contact w-input" maxlength="256" name="Puhelinnumero" data-name="Puhelinnumero" placeholder="Puhelinnumero" id="Puhelinnumero"><select id="Kuinka-sait-tiet-meist" name="Kuinka-sait-tiet-meist" data-name="Kuinka sait tietää meistä" class="select-field w-node-_15d6b544-3973-d893-e977-3880fb84d369-6f037d22 w-select">
+              <form method="post" name="wf-form-Yhteydenottolomake" data-name="Yhteydenottolomake" style="opacity:0" data-w-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288" action="https://airform.io/joose@nords.fi" id="wf-form-Yhteydenottolomake" class="form-grid" data-wf-page-id="63949a6eea7b3a1e6f037d22" data-wf-element-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288"><input type="text" class="text-field-contact w-input" maxlength="256" name="nimi" data-name="nimi" placeholder="Nimi*" id="nimi-2" required=""><input type="text" class="text-field-contact w-input" maxlength="256" name="yritys" data-name="yritys" placeholder="Yrityksen nimi" id="yritys"><input type="email" class="text-field-contact w-input" maxlength="256" name="sposti" data-name="sposti" placeholder="Sähköposti*" id="sposti" required=""><input type="tel" class="text-field-contact w-input" maxlength="256" name="puhelinnumero" data-name="puhelinnumero" placeholder="Puhelinnumero" id="puhelinnumero-2"><select id="kuinka-sait-tietaa-meista" name="kuinka-sait-tietaa-meista" data-name="kuinka-sait-tietaa-meista" class="select-field w-node-_15d6b544-3973-d893-e977-3880fb84d369-6f037d22 w-select">
                   <option value="">Kuinka sait tietää meistä</option>
                   <option value="Googlen hakutuloksista">Googlen hakutuloksista</option>
                   <option value="Suositus ystävältä">Suositus ystävältä</option>
                   <option value="Olin aiemmin asiakkaanne">Olin aiemmin asiakkaanne</option>
                   <option value="Sosiaalisen median kautta">Sosiaalisen median kautta</option>
                   <option value="Olimme teihin yhteydessä">Olimme teihin yhteydessä</option>
-                </select><textarea id="Viesti" name="Viesti" maxlength="5000" data-name="Viesti" placeholder="Viesti*" required="" class="text-field-contact area w-input"></textarea>
+                </select><textarea id="viesti-2" name="viesti" maxlength="5000" data-name="viesti" placeholder="Viesti*" required="" class="text-field-contact area w-input"></textarea>
                 <div><input type="submit" value="Lähetä" data-wait="Odota hetki..." class="button full w-button">
                   <div class="security-field">
                     <div class="security-icon w-embed"><svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
