Cleanup code and update form configurations

--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 23:46:20 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Jun 29 2023 07:51:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a98fc037da0" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
             <div class="paragraph-1 paragraph-gray top-margin">Täytäthän alla olevat tiedot oikein, niin saamme sivujesi tuotannon nopeasti liikkeelle!</div>
           </div>
           <div class="w-form">
-            <form id="wf-form-Kotisivut-kysely" name="wf-form-Kotisivut-kysely" data-name="Kotisivut-kysely" action="https://formsubmit.co/joose@nords.fi" method="post" data-wf-page-id="63949a6eea7b3a98fc037da0" data-wf-element-id="f84697b4-cf95-afb8-9596-d3a41240f306">
+            <form id="wf-form-Kotisivut-kysely" name="wf-form-Kotisivut-kysely" data-name="Kotisivut-kysely" action="https://airform.io/joose@nords.fi" method="post" data-wf-page-id="63949a6eea7b3a98fc037da0" data-wf-element-id="f84697b4-cf95-afb8-9596-d3a41240f306">
               <div class="personal-details">
                 <div id="w-node-_03dbe132-6c02-a1b6-544d-0ed63a45e884-fc037da0" class="display-4">Yrityksen tiedot</div>
                 <div id="w-node-f84697b4-cf95-afb8-9596-d3a41240f346-fc037da0" class="grid-cell"><label for="nimi" class="paragraph-1 paragraph-gray">Yrityksesi nimi</label><input type="text" class="text-field-2 w-input" maxlength="256" name="nimi" data-name="nimi" placeholder="Nords Oy" id="nimi" required=""></div>
