--- a/palaute.html
+++ b/palaute.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jun 28 2023 23:46:20 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Jun 29 2023 07:51:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3aa41e037d70" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
             <div class="paragraph-1 paragraph-gray top-margin">Arvostamme suuresti palautettasi ja haluamme tietää, miten olemme onnistuneet palvellessamme sinua. Asiakkaan tyytyväisyys on meille yksi tärkeimmistä tavoitteista, ja siksi haluamme kuulla, mitä mieltä olet kokemuksestasi.</div>
           </div>
           <div class="w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" action="https://formsubmit.co/joose@nords.fi" method="post" data-wf-page-id="63949a6eea7b3aa41e037d70" data-wf-element-id="1d875b11-be0a-beb5-a8c7-4ca84eaaa359">
+            <form id="email-form" name="email-form" data-name="Email Form" action="https://airform.io/joose@nords.fi" method="post" data-wf-page-id="63949a6eea7b3aa41e037d70" data-wf-element-id="1d875b11-be0a-beb5-a8c7-4ca84eaaa359">
               <div class="form-section-wrap">
                 <div class="display-4">Kuinka onnistuimme?</div>
                 <div class="form-row-wrap"><label class="w-checkbox checkbox-field">
