Update homepage video link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Jun 29 2023 07:51:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a13cc037ca2" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -158,11 +158,12 @@
                     <script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "https://youtube.com/watch?v=fuR3yeeS22w",
-      "originalUrl": "https://youtube.com/watch?v=fuR3yeeS22w",
+      "url": "https://youtube.com/watch?v=GKLX8qUS-Cc",
+      "originalUrl": "https://youtube.com/watch?v=GKLX8qUS-Cc",
       "width": 940,
       "height": 528,
-      "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FfuR3yeeS22w%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DfuR3yeeS22w&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen=\"true\"></iframe>",
+      "thumbnailUrl": "https://i.ytimg.com/vi/GKLX8qUS-Cc/hqdefault.jpg",
+      "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FGKLX8qUS-Cc%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DGKLX8qUS-Cc&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FGKLX8qUS-Cc%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen; encrypted-media; picture-in-picture;\" allowfullscreen=\"true\"></iframe>",
       "type": "video"
     }
   ],
