--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Jun 29 2023 07:51:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a8212037d6b" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -131,6 +131,25 @@
           <div class="margin-bottom-80px">
             <div class="w-layout-grid client-grid">
               <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-12037d6b" class="client-card">
+                <a href="referenssi/lannentilan-leipomo" class="client-image w-inline-block"><img src="images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/lannentilan-leipomo-mockup-p-500.webp 500w, images/lannentilan-leipomo-mockup-p-800.webp 800w, images/lannentilan-leipomo-mockup-p-1080.webp 1080w, images/lannentilan-leipomo-mockup-p-1600.webp 1600w, images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="client-image"></a>
+                <div class="client-content add-shadow">
+                  <div class="category-felx">
+                    <a href="#" class="category-tag">07/2023</a>
+                  </div>
+                  <a href="referenssi/lannentilan-leipomo" class="client-title">Lännentilan Leipomo Oy</a>
+                  <div class="margin-20px">
+                    <a href="referenssi/lannentilan-leipomo" class="button-line w-inline-block">
+                      <div>
+                        <div>Lue lisää</div>
+                        <div class="button-line-button">
+                          <div class="button-absolute-line"></div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-_35216830-1c6d-e2d9-ac55-ea76d0a4369a-12037d6b" class="client-card">
                 <a href="referenssi/ficia-oy" class="client-image w-inline-block"><img src="images/ficia.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/ficia-p-500.webp 500w, images/ficia-p-800.webp 800w, images/ficia-p-1080.webp 1080w, images/ficia.webp 1600w" alt="Yrityksen Ficia Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
