--- a/referenssi/lannentilan-leipomo.html
+++ b/referenssi/lannentilan-leipomo.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="648727e2d2f51a223df8919c" data-wf-site="638cce601f96abee0a5facb7">
+<html data-wf-page="64b93e847ff3cbba56a4a97d" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
-  <title>Ficia Oy kotisivut - Nords Oy</title>
-  <meta content="Ficia Oy kotisivut - Nords Oy" property="og:title">
-  <meta content="Ficia Oy kotisivut - Nords Oy" property="twitter:title">
+  <title>Lannentilan leipomo</title>
+  <meta content="Lannentilan leipomo" property="og:title">
+  <meta content="Lannentilan leipomo" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/referenssi/ficia-oy" rel="canonical">
+  <link href="https://www.nords.fi/referenssi/lannentilan-leipomo" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -92,17 +92,17 @@
         </div>
       </div>
     </header>
-    <div class="hero inner _2">
+    <div id="up" class="hero inner _2">
       <div class="container">
         <div class="hero-grid _2">
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-3df8919c" class="part-2 center">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-56a4a97d" class="part-2 center">
             <div class="hero-flex-center">
-              <h1 class="hero-display">Ficia Oy</h1>
+              <h1 class="hero-display">Lännentilan Leipomo Oy</h1>
             </div>
           </div>
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-3df8919c" class="part-1 _2">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-56a4a97d" class="part-1 _2">
             <div class="hero-flex-center left _3">
-              <p class="paragraph-1 second">04/2023</p>
+              <p class="paragraph-1 second">03/2023</p>
             </div>
           </div>
         </div>
@@ -116,16 +116,14 @@
     <div class="section wf-section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/ficia.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/ficia-p-500.webp 500w, ../images/ficia-p-800.webp 800w, ../images/ficia-p-1080.webp 1080w, ../images/ficia.webp 1600w" alt="Yrityksen Ficia Oy kotisivut auki tietokoneella ja matkapuhelimella." class="photo">
+          <div class="photo-animation-main"><img src="../images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/lannentilan-leipomo-mockup-p-500.webp 500w, ../images/lannentilan-leipomo-mockup-p-800.webp 800w, ../images/lannentilan-leipomo-mockup-p-1080.webp 1080w, ../images/lannentilan-leipomo-mockup-p-1600.webp 1600w, ../images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>Ficia Oy on suomalainen &#x27;all inclusive&#x27; palveluja tarjoava toimisto, joka auttaa yrityksiä menestymään tarjoamalla yksilöllisiä ratkaisuja ja monipuolista osaamista. Kotisivuprojektimme keskeisenä tavoitteena oli luoda informatiivinen ja selkeä verkkosivusto, joka auttaa kävijöitä löytämään Ficia Oy:n palvelut helposti.</p>
-            <p>Sivut ovat suunniteltu käyttäjäystävällisesti ja olemme ylpeitä saavutetusta lopputuloksesta! Uskomme, että uudet kotisivut auttavat Ficia Oy:tä saavuttamaan uusia asiakkaita ja kasvattamaan liiketoimintaansa.</p>
-            <p>‍</p>
-            <p>Voit tutustua sivuihin <a href="https://www.ficia.fi/" target="_blank">tästä!</a>
+            <p>Lännentilan Leipomo Oy on Pudasjärvellä vuonna 2002 toimintansa aloittanut rieskaleipomo, joka tarjoaa kotimaisia tuotteita ympäri Suomen. Yhdessä asiakkaamme kanssa olemme luoneet upeat sivut, jotka esittelevät leipomon tuotteita ja tarinaa.</p>
+            <p>Projektin aikana keskityimme korkealaatuisen sisällön ja käyttökokemuksen luomiseen. Tavoitteena oli luoda helppokäyttöinen ja informatiivinen verkkosivusto. Halusimme myös tuoda asiakkaan sosiaalisen median kanavat esiin selkeästi kävijöille!</p>
+            <p>Lannentilanleipomo.fi on ammattimaisesti suunniteltu ja toteutettu kotisivuprojekti, joka on suunniteltu vastaamaan tunnetun rieskaleipomon tarpeita. Olemme ylpeitä saavutetusta lopputuloksesta ja uskomme, että uudet kotisivut antavat yritykselle täysin uuden ilmeen. Voit käydä tutustumassa sivuihin klikkaamalla <a href="https://www.lannentilanleipomo.fi/" target="_blank">tästä!</a>
             </p>
-            <h2>‍</h2>
           </div>
         </div>
       </div>
@@ -148,15 +146,15 @@
           </div>
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-3df8919c" class="client-card">
-                <a href="../referenssi/vsc-oy" class="client-image w-inline-block"><img src="../images/vsc.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/vsc-p-500.webp 500w, ../images/vsc-p-800.webp 800w, ../images/vsc-p-1080.webp 1080w, ../images/vsc.webp 1600w" alt="Yrityksen VSC Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-56a4a97d" class="client-card">
+                <a href="../referenssi/ficia-oy" class="client-image w-inline-block"><img src="../images/ficia.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/ficia-p-500.webp 500w, ../images/ficia-p-800.webp 800w, ../images/ficia-p-1080.webp 1080w, ../images/ficia.webp 1600w" alt="Yrityksen Ficia Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="#" class="category-tag">04/2023</a>
                   </div>
-                  <a href="../referenssi/vsc-oy" class="client-title">VSC Oy</a>
+                  <a href="../referenssi/ficia-oy" class="client-title">Ficia Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/vsc-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/ficia-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -167,7 +165,7 @@
                   </div>
                 </div>
               </div>
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-3df8919c" class="client-card">
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-56a4a97d" class="client-card">
                 <a href="../referenssi/vorrios-oy" class="client-image w-inline-block"><img src="../images/vorrios.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/vorrios-p-500.webp 500w, ../images/vorrios-p-800.webp 800w, ../images/vorrios-p-1080.webp 1080w, ../images/vorrios.webp 1600w" alt="Yrityksen Vorrios Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
@@ -271,7 +269,7 @@
         </div>
       </div><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/631767f79e39ffdfbe0a63c5_sammy-line-three-black-lines-1.svg" loading="lazy" alt="" class="airplane-image _1">
     </footer>
-    <a href="#" class="go-top w-inline-block">
+    <a href="#up" class="go-top w-inline-block">
       <div>Ylös</div>
     </a>
   </div>
