--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3adc91037cde" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -101,7 +101,7 @@
       </div>
     </div><img src="images/sammy-line-two-black-lines-of-motion.svg" loading="lazy" style="opacity:0" data-w-id="06bbe2d7-a4e1-7ccc-4bb3-c72fb963b765" alt="" class="airplane-image _2">
   </div>
-  <div class="section gray feedback wf-section">
+  <div class="section gray feedback">
     <div class="container">
       <div class="footer-divider"></div>
       <div>
