--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a13cc037ca2" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -130,7 +130,7 @@
         </div>
       </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="a9f89ace-dac4-8e67-a653-7bd5c77913ae" alt="Image of paper Airplane" class="airplane-image">
     </section>
-    <section id="Scroll" class="section wf-section">
+    <section id="Scroll" class="section">
       <div class="container">
         <div data-w-id="1f24fd44-1907-0ccf-4539-372782965c36" style="opacity:0" class="max-w-width">
           <h2 class="display-3">Olemme palvelleet jo yli 250 upeaa yritystä</h2>
@@ -180,7 +180,7 @@
         </div>
       </div><img src="images/sammy-line-two-black-lines-of-motion.svg" loading="lazy" alt="" class="airplane-image _2">
     </section>
-    <section class="section overflow wf-section">
+    <section class="section overflow">
       <div class="container">
         <h3 class="display-4">Me keskitymme yksityiskohtiin, jotta sinun ei tarvitse. Kun työskentelet kanssamme, voit olla varma, että kotisivusi ja logosi täyttää kaikki standardit.</h3>
         <div class="margin-60px">
@@ -234,7 +234,7 @@
         </div>
       </div>
     </section>
-    <section class="section overflow wf-section">
+    <section class="section overflow">
       <div class="container">
         <h3 class="display-4 margin-bottom">Tutustu läpinäkyvään hinnastoomme – selkeät hinnat, ei piilokuluja ja yksinkertainen hinnoittelurakenne.</h3>
         <div class="pricing">
@@ -244,7 +244,7 @@
                 <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
               </a><img src="images/simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
               <h3 class="pricing-type">Logon suunnittelu</h3>
-              <div class="pricing-title no-margin">€ 149.00 <span class="alv">+ alv. 24%<br></span></div>
+              <div class="pricing-title no-margin">€ 199.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
@@ -516,7 +516,7 @@
         </div>
       </div><img src="images/nords-tyytyvaisyystakuu-cropped.svg" loading="lazy" alt="" class="airplane-image _4 hide">
     </section>
-    <section class="section source-code wf-section">
+    <section class="section source-code">
       <div class="w-layout-blockcontainer container w-container">
         <div class="source-code-wrap">
           <a href="https://github.com/nordsoy" target="_blank" class="github-wrap w-inline-block"><img src="images/github-blue.svg" loading="lazy" alt="Sininen Github logo." class="github-icon">
@@ -526,7 +526,7 @@
         </div>
       </div>
     </section>
-    <section class="section gray wf-section">
+    <section class="section gray">
       <div class="container">
         <div data-w-id="3621ae3a-1f28-5d2c-f582-4997a61a9a4c" style="opacity:0" class="max-w-width _2">
           <h3 class="display-3">Referenssit</h3>
@@ -585,7 +585,7 @@
         </div>
       </div>
     </section>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
