--- a/kiitos.html
+++ b/kiitos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="648c1ca63aaa84b060bf0e16" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -102,7 +102,7 @@
       </div>
     </div><img src="images/sammy-line-two-black-lines-of-motion.svg" loading="lazy" style="opacity:0" data-w-id="ef2b4370-3f29-9027-747f-858f76d89855" alt="" class="airplane-image _2">
   </div>
-  <div class="section gray feedback wf-section">
+  <div class="section gray feedback">
     <div class="container">
       <div class="footer-divider"></div>
       <div>
