--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a98fc037da0" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@
         <div class="navigation-grid center"><img src="images/ndm-cropped.png" loading="lazy" id="w-node-f84697b4-cf95-afb8-9596-d3a41240f2fc-fc037da0" sizes="(max-width: 479px) 100vw, 300px" alt="" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="nords-feedback"></div>
       </div>
     </div>
-    <div class="section feedback wf-section">
+    <div class="section feedback">
       <div class="container">
         <div class="form-wrapper">
           <div class="title-wrap">
@@ -96,7 +96,7 @@
         </div>
       </div>
     </div>
-    <div class="section gray feedback wf-section">
+    <div class="section gray feedback">
       <div class="container">
         <div class="footer-divider"></div>
         <div>
