--- a/referenssi/lannentilan-leipomo.html
+++ b/referenssi/lannentilan-leipomo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="64b93e847ff3cbba56a4a97d" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -113,7 +113,7 @@
         </div>
       </div><img src="../images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="bc32a490-4e94-16cf-5f56-cd348f1e5f61" alt="Image of paper Airplane" class="airplane-image">
     </div>
-    <div class="section wf-section">
+    <div class="section">
       <div class="container">
         <div class="blog-rich-text">
           <div class="photo-animation-main"><img src="../images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/lannentilan-leipomo-mockup-p-500.webp 500w, ../images/lannentilan-leipomo-mockup-p-800.webp 800w, ../images/lannentilan-leipomo-mockup-p-1080.webp 1080w, ../images/lannentilan-leipomo-mockup-p-1600.webp 1600w, ../images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="photo">
@@ -128,7 +128,7 @@
         </div>
       </div>
     </div>
-    <div class="section gray wf-section"><img src="../images/sammy-line-two-black-lines-of-motion.svg" loading="lazy" alt="" class="airplane-image _2">
+    <div class="section gray"><img src="../images/sammy-line-two-black-lines-of-motion.svg" loading="lazy" alt="" class="airplane-image _2">
       <div class="container">
         <div class="container">
           <div data-w-id="bc32a490-4e94-16cf-5f56-cd348f1e5f79" style="opacity:0" class="max-w-width _2">
@@ -189,7 +189,7 @@
         </div>
       </div>
     </div>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
