--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a8212037d6b" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -125,7 +125,7 @@
         </div>
       </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="761e373d-5dd1-b6bc-2275-a2f93827e2b2" alt="Image of paper Airplane" class="airplane-image">
     </section>
-    <section class="section wf-section">
+    <section class="section">
       <div class="container">
         <div class="container">
           <div class="margin-bottom-80px">
@@ -269,7 +269,7 @@
         </div>
       </div>
     </section>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
