--- a/docs.html
+++ b/docs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="648ed6b2dc2a09b6356cfe49" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -125,7 +125,7 @@
         </div>
       </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="3732fbad-a8b8-eb4e-d4ef-e9633d1558aa" alt="Image of paper Airplane" class="airplane-image">
     </section>
-    <section id="scroll" class="section wf-section">
+    <section id="scroll" class="section">
       <div class="document-container">
         <div class="document-menu">
           <div class="document-menu-block">
@@ -304,7 +304,7 @@
         </div>
       </div>
     </section>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
