--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="648723801c20dfbb10a9db9d" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -124,7 +124,7 @@
         </div>
       </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="62d2a689-3014-4d03-e5fd-5a2792f9815e" alt="Image of paper Airplane" class="airplane-image">
     </section>
-    <section id="scroll" class="section overflow wf-section">
+    <section id="scroll" class="section overflow">
       <div class="container">
         <div class="pricing">
           <div data-w-id="15c45ca9-e70f-feb7-edf2-c68d38fe80ec" class="w-layout-grid grid-2">
@@ -133,7 +133,7 @@
                 <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
               </a><img src="images/simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
               <h3 class="pricing-type">Logon suunnittelu</h3>
-              <div class="pricing-title no-margin">€ 149.00 <span class="alv">+ alv. 24%<br></span></div>
+              <div class="pricing-title no-margin">€ 199.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
@@ -299,7 +299,7 @@
         </div>
       </div>
     </section>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
