--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a1e6f037d22" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -124,7 +124,7 @@
         </div>
       </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="2a18959f-0d4a-7671-4695-e1c236458ffd" alt="Image of paper Airplane" class="airplane-image">
     </section>
-    <section id="scroll" class="section overflow wf-section">
+    <section id="scroll" class="section overflow">
       <div class="container">
         <div>
           <div data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1da" style="opacity:0" class="contact-grid">
@@ -173,7 +173,7 @@
         </div>
       </div>
     </section>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
