--- a/palveluehdot.html
+++ b/palveluehdot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a6dfd037d71" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -124,7 +124,7 @@
         </div>
       </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="3732fbad-a8b8-eb4e-d4ef-e9633d1558aa" alt="Image of paper Airplane" class="airplane-image">
     </section>
-    <section class="section wf-section">
+    <section class="section">
       <div class="container">
         <div class="legal-wrapper">
           <p>Viimeksi päivitetty: 17/06/2023</p>
@@ -163,7 +163,7 @@
         </div>
       </div>
     </section>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
