--- a/palvelut.html
+++ b/palvelut.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 28 2023 13:44:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a292c037d99" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -124,7 +124,7 @@
         </div>
       </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="62d2a689-3014-4d03-e5fd-5a2792f9815e" alt="Image of paper Airplane" class="airplane-image">
     </section>
-    <section id="scroll" class="section small-padding wf-section">
+    <section id="scroll" class="section small-padding">
       <div class="container">
         <div class="photo-center large">
           <div id="w-node-_15affbfb-fbce-64ed-7b95-4f16ce2b3560-2c037d99" class="right-part">
@@ -204,7 +204,7 @@
         </div>
       </div>
     </section>
-    <section class="section small-top-padding wf-section">
+    <section class="section small-top-padding">
       <div class="container">
         <div class="photo-center large reverse">
           <div class="photo-animation-main"><img src="images/design-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 1279px) 51vw, 537.5px" srcset="images/design-mockup-p-500.webp 500w, images/design-mockup-p-800.webp 800w, images/design-mockup-p-1080.webp 1080w, images/design-mockup-p-1600.webp 1600w, images/design-mockup.webp 2000w" alt="Macbook kannettava tietokone, jossa on näkymä Adobe Illustrator ohjelmasta." class="photo all-left">
@@ -290,7 +290,7 @@
         </div>
       </div>
     </section>
-    <section id="Hinnasto" class="section overflow small-top-padding wf-section">
+    <section id="Hinnasto" class="section overflow small-top-padding">
       <div class="container">
         <div class="max-w-width">
           <h2 data-w-id="225668f2-1e73-5196-4375-029bedbf6481" style="opacity:0" class="display-2">Usein kysyttyjä kysymyksiä</h2>
@@ -371,7 +371,7 @@
         </div>
       </div>
     </section>
-    <footer class="section gray cta wf-section">
+    <footer class="section gray cta">
       <div class="container">
         <div class="max-w-width">
           <div class="top-divider">
