Update pricing information

--- a/palaute.html
+++ b/palaute.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Aug 22 2023 05:55:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3aa41e037d70" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -116,7 +116,7 @@
             </div>
             <div class="margin-30px">
               <div class="navigation-flex">
-                <a href="https://www.nords.fi/" class="footer-link bigger">Koti</a>
+                <a href="https://www.nords.fi" class="footer-link bigger">Koti</a>
                 <a href="palvelut" class="footer-link bigger">Palvelut</a>
                 <a href="hinnasto" class="footer-link bigger">Hinnasto</a>
                 <a href="referenssit" class="footer-link bigger">Referenssit</a>
