--- a/referenssi/vorrios-oy.html
+++ b/referenssi/vorrios-oy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Aug 22 2023 05:55:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="648c13bb2acf21f4e3bfc24c" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="navigation-grid">
             <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a02689f-1a02689b" class="div-flex">
-              <a href="https://www.nords.fi/" class="logo-link w-inline-block"><img src="../images/ndm-cropped.png" loading="lazy" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." class="nords-logo"></a>
+              <a href="https://www.nords.fi" class="logo-link w-inline-block"><img src="../images/ndm-cropped.png" loading="lazy" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." class="nords-logo"></a>
             </div>
             <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a0268a2-1a02689b" class="flex-wrapper">
               <div data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268df" class="hamburger-menu"><img src="../images/plus.svg" loading="lazy" width="20" alt="Kaksi viivaa, jotka muodostavat plus merkin." class="animation-image _2">
@@ -41,7 +41,7 @@
       <div class="menu">
         <div class="grid-menu">
           <div class="nav-wrapper _1">
-            <a href="https://www.nords.fi/" class="navlinks w-inline-block">
+            <a href="https://www.nords.fi" class="navlinks w-inline-block">
               <div class="nav-text">Etusivu</div>
               <div class="nav-text text-shadow">Etusivu</div>
             </a>
@@ -226,7 +226,7 @@
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
-                  <a href="https://www.nords.fi/" class="footer-link bigger">Etusivu</a>
+                  <a href="https://www.nords.fi" class="footer-link bigger">Etusivu</a>
                   <a href="../palvelut" class="footer-link bigger">Palvelut</a>
                   <a href="../hinnasto" class="footer-link bigger">Hinnasto</a>
                   <a href="../referenssit" class="footer-link bigger">Referenssit</a>
