--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 06 2023 10:57:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Aug 22 2023 05:55:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a13cc037ca2" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="navigation-grid">
             <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a02689f-1a02689b" class="div-flex">
-              <a href="https://www.nords.fi/" aria-current="page" class="logo-link w-inline-block w--current"><img src="images/ndm-cropped.png" loading="lazy" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." sizes="(max-width: 479px) 100vw, 150px" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="nords-logo"></a>
+              <a href="https://www.nords.fi" aria-current="page" class="logo-link w-inline-block w--current"><img src="images/ndm-cropped.png" loading="lazy" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." sizes="(max-width: 479px) 100vw, 150px" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="nords-logo"></a>
             </div>
             <div id="w-node-_45a1046b-edc1-aa89-87ec-78ea1a0268a2-1a02689b" class="flex-wrapper">
               <div data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268df" class="hamburger-menu"><img src="images/plus.svg" loading="lazy" width="20" alt="Kaksi viivaa, jotka muodostavat plus merkin." class="animation-image _2">
@@ -47,7 +47,7 @@
       <div class="menu">
         <div class="grid-menu">
           <div class="nav-wrapper _1">
-            <a href="https://www.nords.fi/" aria-current="page" class="navlinks w-inline-block w--current">
+            <a href="https://www.nords.fi" aria-current="page" class="navlinks w-inline-block w--current">
               <div class="nav-text">Etusivu</div>
               <div class="nav-text text-shadow">Etusivu</div>
             </a>
@@ -244,7 +244,7 @@
                 <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
               </a><img src="images/simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
               <h3 class="pricing-type">Logon suunnittelu</h3>
-              <div class="pricing-title no-margin">€ 199.00 <span class="alv">+ alv. 24%<br></span></div>
+              <div class="pricing-title no-margin">€ 179.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
@@ -617,7 +617,7 @@
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
-                  <a href="https://www.nords.fi/" aria-current="page" class="footer-link bigger w--current">Etusivu</a>
+                  <a href="https://www.nords.fi" aria-current="page" class="footer-link bigger w--current">Etusivu</a>
                   <a href="palvelut" class="footer-link bigger">Palvelut</a>
                   <a href="hinnasto" class="footer-link bigger">Hinnasto</a>
                   <a href="referenssit" class="footer-link bigger">Referenssit</a>
